--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,8 +6,14 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "Code-Pile"
+requires-python = ">=3.9"
 version = "0.0.1"
 dependencies = [
     "pydantic",
-    "internetarchive"
+    "internetarchive",
+    "xmltodict",
+    "simplejson",
+    "pandas",
+    "py7zr",
+    "pyarrow"
 ]
