--- a/codepile/stackexchange/.gitignore
+++ b/codepile/stackexchange/.gitignore
@@ -1,1 +1,7 @@
-tests/data/temp/**
+tests/data/*
+!tests/data/dumps
+!tests/data/temp/
+tests/data/temp/*
+tests/data/temp/StackExchange/**
+!tests/data/temp/StackExchange/
+!tests/data/temp/StackExchange/raw_data.json
