Added scrapy and html2text dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,9 @@ dependencies = [
     "pandas",
     "pyarrow",
     "lxml",
-    "pyspark"
+    "pyspark",
+    "scrapy",
+    "html2text",
 ]
 
 [tool.pytest.ini_options]
